# bme280-server

./: README.md
server/: Cargo.toml
server/src/: gpio_list.rs  main.rs
server/src/html/: error_page.html  index.html
