[package]
edition = "2021"
name = "bme280-server"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Tutla"]
description = "BME280 - Temperature, Humidity, and Pressure Server"
repository = "https://github.com/tutla53/bme280-server"

[dependencies]
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb-logger = { version = "0.4.0" }
embedded-hal = "1.0.0"

defmt = "0.3"
defmt-rtt = "0.4"
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a" }

heapless = { version = "0.8", default-features = false }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
log = "0.4"
pio = "0.2.1"
bme280 = "0.5.1"
ssd1306 = { version = "0.10.0", features = ["graphics", "async"] }
display-interface = "0.5.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[package.metadata.cargo-machete]
ignored = ["defmt", "defmt-rtt", "cortex-m-rt", "panic-probe"]